--- a/Blog/业务/#文件上传，搞懂这8种场景就够了.md
+++ b/Blog/业务/#文件上传，搞懂这8种场景就够了.md
@@ -48,7 +48,7 @@
 **js**
 
 ```
-const uploadFileEle = document.querySelector("#uploadFile");
+const uploadFileEle = document.querySelector("[[uploadFile]]");
 
 const request = axios.create({
   baseURL: "http://localhost:3000/upload",
@@ -429,24 +429,24 @@ function upload({ url, file, fileName, fieldName = "file" }) {
 **css**
 
 ```
-#dropArea {
+[[dropArea]] {
   width: 300px;
   height: 300px;
   border: 1px dashed gray;
   margin-bottom: 20px;
 }
-#dropArea p {
+[[dropArea]] p {
   text-align: center;
   color: #999;
 }
-#dropArea.highlighted {
-  background-color: #ddd;
+[[dropArea]].highlighted {
+  background-color: [[ddd]];
 }
-#imagePreview {
+[[imagePreview]] {
   max-height: 250px;
   overflow-y: scroll;
 }
-#imagePreview img {
+[[imagePreview]] img {
   width: 100%;
   display: block;
   margin: auto;
@@ -461,8 +461,8 @@ function upload({ url, file, fileName, fieldName = "file" }) {
 **1、阻止默认拖拽行为**
 
 ```
-const dropAreaEle = document.querySelector("#dropArea");
-const imgPreviewEle = document.querySelector("#imagePreview");
+const dropAreaEle = document.querySelector("[[dropArea]]");
+const imgPreviewEle = document.querySelector("[[imagePreview]]");
 const IMAGE_MIME_REGEX = /^image\/(jpe?g|gif|png)$/i;
 
 ["dragenter", "dragover", "dragleave", "drop"].forEach((eventName) => {
@@ -616,18 +616,18 @@ navigator.clipboard.readText().then(
 **css**
 
 ```
-#uploadArea {
+[[uploadArea]] {
    width: 400px;
    height: 400px;
    border: 1px dashed gray;
    display: table-cell;
    vertical-align: middle;
 }
-#uploadArea p {
+[[uploadArea]] p {
    text-align: center;
    color: #999;
 }
-#uploadArea img {
+[[uploadArea]] img {
    max-width: 100%;
    max-height: 100%;
    display: block;
@@ -642,7 +642,7 @@ navigator.clipboard.readText().then(
 
 ```
 const IMAGE_MIME_REGEX = /^image\/(jpe?g|gif|png)$/i;
-const uploadAreaEle = document.querySelector("#uploadArea");
+const uploadAreaEle = document.querySelector("[[uploadArea]]");
 
 uploadAreaEle.addEventListener("paste", async (e) => {
   e.preventDefault();
