--- a/Blog/工程化/2021 年当我们聊前端部署时，我们在聊什么.md
+++ b/Blog/工程化/2021 年当我们聊前端部署时，我们在聊什么.md
@@ -197,7 +197,7 @@ module.exports = {
 
 > 备注1：我们往往会将一套代码部署到多套前端环境，还需要在构建时注入当前部署相关环境变量（如 `staging`、`prod`、`dev`、`pre`等），以便动态构建 `publicPath`。  
 > 备注 2：这里动态构造的 publicPath 里，严格的将产物按环境 + 发布版本做了隔离 & 收敛。 某业务前端曾将所有环境的静态资源放到一起，以Hash做区分。但疑似出现了文件名 + hash 冲突，但文件内容不一样，导致了线上事故。故墙裂建议严格对产物做物理隔离。  
-> 备注 3：`publicPath` 详解[webpack.docschina.org/configurati…](https://link.juejin.cn/?target=https%3A%2F%2Fwebpack.docschina.org%2Fconfiguration%2Foutput%2F%23outputpublicpath "https://webpack.docschina.org/configuration/output/#outputpublicpath")  
+> 备注 3：`publicPath` 详解[webpack.docschina.org/configurati…](https://link.juejin.cn/?target=https%3A%2F%2Fwebpack.docschina.org%2Fconfiguration%2Foutput%2F%23outputpublicpath "https://webpack.docschina.org/configuration/output/[[outputpublicpath]]")  
 > 备注 4：此处使用了 `content-hash`，与 `hash`、`chunkhash` 的区别请见：[详解webpack中的hash、chunkhash、contenthash区别](https://link.juejin.cn/?target=https%3A%2F%2Fwww.cnblogs.com%2Fajaemp%2Fp%2F12915452.html "https://www.cnblogs.com/ajaemp/p/12915452.html")  
 > 备注 5：使用 `contenthash` 时，往往会增加一个小模块后，整体文件的 `hash` 都发生变化，原因为`Webpack` 的 `module.id` 默认基于解析顺序自增，从而引发缓存失效。具体可通过设置 `optimization.moduleIds` 设置为 `'deterministic'` 。  
 > 具体详见 [webpack 官方文档-缓存](https://link.juejin.cn/?target=https%3A%2F%2Fwebpack.docschina.org%2Fguides%2Fcaching%2F "https://webpack.docschina.org/guides/caching/")  
