--- a/Blog/浏览器/当事件循环遇到更新渲染.md
+++ b/Blog/浏览器/当事件循环遇到更新渲染.md
@@ -417,7 +417,7 @@ requestIdleCallback(handleTask)
 2.  event-loops([https://html.spec.whatwg.org/multipage/webappapis.html#event-loops](https://link.zhihu.com/?target=https%3A//html.spec.whatwg.org/multipage/webappapis.html%23event-loops))
 3.  processing-model([https://html.spec.whatwg.org/multipage/webappapis.html#event-loop-processing-model](https://link.zhihu.com/?target=https%3A//html.spec.whatwg.org/multipage/webappapis.html%23event-loop-processing-model))
 4.  setTimeout([https://developer.mozilla.org/zh-CN/docs/Web/API/Window/setTimeout](https://link.zhihu.com/?target=https%3A//developer.mozilla.org/zh-CN/docs/Web/API/Window/setTimeout))
-5.  Generator 函数的异步应用([https://es6.ruanyifeng.com/#docs/generator-async](https://link.zhihu.com/?target=https%3A//es6.ruanyifeng.com/%23docs/generator-async))
+5.  Generator 函数的异步应用([https://es6.ruanyifeng.com/[[docs/generator-async]]](https://link.zhihu.com/?target=https%3A//es6.ruanyifeng.com/%23docs/generator-async))
 6.  Tasks, microtasks, queues and schedules([https://jakearchibald.com/2015/tasks-microtasks-queues-and-schedules/](https://link.zhihu.com/?target=https%3A//jakearchibald.com/2015/tasks-microtasks-queues-and-schedules/))
 
 ## 福利部分
